--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "sass-loader": "^9.0.2",
     "vue": "^2.6.11",
     "vue-loader": "^15.9.3",
+    "vue-router": "^3.3.4",
     "vue-template-compiler": "^2.6.11"
   },
   "devDependencies": {
